--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,11 @@ body._lock {
   height: 100%;
   position: relative;
   background: var(--white);
+  transition: all 0.5s ease;
+}
+
+.prod-card.del {
+  transform: scale(0);
 }
 
 .prod-card::after {
@@ -2003,7 +2008,7 @@ body._lock {
   position: fixed;
   bottom: 30px;
   right: 30px;
-  z-index: 100;
+  z-index: 5;
   margin-left: 30px;
   opacity: 0;
   visibility: hidden;
@@ -3404,9 +3409,11 @@ body._lock {
 
 .thumbs-product__scrollbar {
   width: 4px;
-  height: 100%;
+  height: auto;
   position: absolute;
-  top: 0;
+  top: 10%;
+  height: 80%;
+  bottom: 10%;
   right: 0;
   background: #D9D9D9;
   border-radius: 11px;
@@ -3723,6 +3730,11 @@ body._lock {
   height: 100%;
   padding: 16px;
   z-index: 1;
+}
+
+.about-product__shops .simplebar-track.simplebar-vertical {
+  top: 10%;
+  bottom: 10%;
 }
 
 .about-product .swiper-slide-thumb-active .thumbs-product__item {
@@ -5344,7 +5356,6 @@ body._lock {
 .account__header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
   flex-wrap: wrap;
   gap: 10px;
   border-radius: 5px;
@@ -5382,6 +5393,12 @@ body._lock {
   border: 2px solid #CD8179;
   background: linear-gradient(0deg, rgba(205, 129, 121, 0.02) 0%, rgba(205, 129, 121, 0.02) 100%), #FFF;
   padding: 8px 16px;
+}
+
+.account__sort {
+  flex: 1 1 auto;
+  display: flex;
+  justify-content: center;
 }
 
 .account__btns {
@@ -6550,12 +6567,6 @@ body._lock {
     left: 0;
   }
 
-  .thumbs-product__scrollbar .swiper-scrollbar-drag {
-    height: unset;
-    width: 100%;
-    height: 100%;
-  }
-
   .image-product {
     order: 1;
   }
@@ -6751,6 +6762,10 @@ body._lock {
 
   .submenu__alphabet {
     grid-template-columns: repeat(6, 1fr);
+  }
+
+  .cat-main__wrapper {
+    transition-timing-function: unset;
   }
 
   .card-main__header {
@@ -7227,6 +7242,10 @@ body._lock {
 
   .main-category__mode .mode__btn.grid3 {
     display: none;
+  }
+
+  .main-category__mode .mode__btn {
+    opacity: 1;
   }
 
   .main-category__mode .mode__btn.active {
