--- a/css/style.css
+++ b/css/style.css
@@ -1663,11 +1663,6 @@ body._lock {
   transition: all 0.3s linear;
 }
 
-.dialog-filter.active {
-  opacity: 1;
-  visibility: visible;
-}
-
 .dialog-filter__container {
   height: 100%;
   position: relative;
@@ -6653,6 +6648,11 @@ body._lock {
     display: flex;
   }
 
+  .filter.active .dialog-filter.active {
+    opacity: 1;
+    visibility: visible;
+  }
+
   .filter::before {
     content: "";
     position: fixed;
@@ -6677,6 +6677,7 @@ body._lock {
     padding: 96px 16px 16px;
     transition: all 0.3s linear;
     scrollbar-width: none;
+    padding-bottom: 230px;
   }
 
   .filter__body::-webkit-scrollbar {
@@ -6685,20 +6686,15 @@ body._lock {
   }
 
   .dialog-filter {
-    position: relative;
-    height: unset;
-  }
-
-  .dialog-filter__container {
-    height: unset;
+    position: absolute;
   }
 
   .dialog-filter__body {
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    margin: 0 auto;
+    position: absolute;
+    top: unset;
+    left: 50%;
+    bottom: 30px;
+    transform: translate(-50%, 0);
   }
 
   .dialog-filter__body::before {
