--- a/css/style.css
+++ b/css/style.css
@@ -3811,7 +3811,7 @@ body._lock {
   fill: var(--black);
 }
 
-.shops__list {
+.shops__wrapper {
   flex: 1 1 auto;
   overflow-y: auto;
   padding-right: 24px;
