--- a/css/style.css
+++ b/css/style.css
@@ -2092,6 +2092,17 @@ body._lock {
      object-fit: contain;
 }
 
+.cookies__link {
+  font-family: "Manrope", sans-serif;
+  color: #3975EA;
+  font-weight: 500;
+  text-decoration: underline;
+}
+
+.cookies__link:hover {
+  text-decoration: none;
+}
+
 .header {
   background: var(--blue);
   position: relative;
