--- a/css/account.css
+++ b/css/account.css
@@ -1117,6 +1117,259 @@ body._lock {
   border: 1px solid rgba(33, 33, 33, 0.5);
 }
 
+.tabs {
+  position: relative;
+}
+
+.tabs__header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow-x: auto;
+  scrollbar-width: none;
+  scrollbar-color: #000 #fff;
+}
+
+.tabs__header::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.tabs__item {
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+.tabs__body {
+  position: relative;
+  transition: all 0.2s linear;
+}
+
+.tabs__block {
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s linear;
+  width: 100%;
+}
+
+.tabs__block._active {
+  opacity: 1;
+  visibility: visible;
+  position: relative;
+}
+
+.prod-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
+  background: var(--white);
+  transition: all 0.5s ease;
+}
+
+.prod-card.del {
+  transform: scale(0);
+}
+
+.prod-card::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  display: none;
+}
+
+.prod-card.disable::after {
+  display: block;
+}
+
+.prod-card.disable .prod-card__image {
+  pointer-events: none;
+}
+
+.prod-card__labels {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.prod-card__label {
+  font-family: "Manrope", sans-serif;
+  font-size: 0.75rem;
+  font-weight: 600;
+  color: var(--white);
+  border-radius: 3px;
+  background: var(--red);
+  padding: 3px 6px;
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.prod-card__favorite {
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  border: 1px solid rgba(33, 33, 33, 0.1);
+  background: #FFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.prod-card__favorite.active svg {
+  fill: var(--red);
+}
+
+.prod-card__favorite svg {
+  width: 16px;
+  height: 16px;
+  fill: var(--black);
+  transition: all 0.2s linear;
+}
+
+.prod-card__delete {
+  width: 24px;
+  height: 24px;
+  border-radius: 3px;
+  border: 1px solid rgba(33, 33, 33, 0.1);
+  background: #FFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.prod-card__delete svg {
+  width: 16px;
+  height: 16px;
+  fill: var(--black);
+}
+
+.prod-card__image {
+  width: 100%;
+  aspect-ratio: 250/320;
+  position: relative;
+  display: block;
+  background: url("../img/loading.gif") 50% no-repeat;
+}
+
+.prod-card__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.prod-card__details {
+  padding: 16px;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.prod-card__name {
+  font-size: 0.9375rem;
+  font-weight: 500;
+  opacity: 0.7;
+  margin-bottom: 4px;
+  color: var(--black);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 1.5;
+}
+
+.prod-card__type {
+  font-family: "Manrope", sans-serif;
+  font-size: 0.8125rem;
+  font-weight: 800;
+  margin-bottom: 8px;
+}
+
+.prod-card__size {
+  margin-bottom: 15px;
+  font-size: 0.9375rem;
+  font-weight: 500;
+  opacity: 0.7;
+}
+
+.prod-card__prices {
+  flex: 1 1 auto;
+  display: flex;
+  align-items: flex-end;
+}
+
+.prod-card__colors {
+  margin-bottom: 15px;
+}
+
+.prod-card__out {
+  font-family: "Manrope", sans-serif;
+  font-size: 0.875rem;
+  font-weight: 500;
+  border-radius: 5px;
+  border: 1px solid #C7CAD1;
+  background: #F3F4F6;
+  padding: 8px 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  color: var(--black);
+  text-align: center;
+  white-space: nowrap;
+}
+
+.prices-card__wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.prices-card__reg {
+  color: var(--blue);
+  font-weight: 600;
+  white-space: nowrap;
+}
+
+.prices-card__new {
+  font-weight: 600;
+  color: var(--red);
+  margin-right: 4px;
+  white-space: nowrap;
+}
+
+.prices-card__old {
+  font-weight: 600;
+  font-size: 0.8125rem;
+  color: var(--black);
+  opacity: 0.5;
+  white-space: nowrap;
+  text-decoration: line-through;
+}
+
 .input {
   border-radius: 5px;
   border: 1px solid rgba(33, 33, 33, 0.5);
@@ -1560,6 +1813,35 @@ body._lock {
     margin-bottom: calc(16px + 16 * (100vw - 320px) / 1600);
   }
 
+  .prod-card__name {
+    font-size: calc(0.8125rem + 2 * (100vw - 20rem) / 1600);
+  }
+
+  .prod-card__type {
+    font-size: calc(0.6875rem + 2 * (100vw - 20rem) / 1600);
+  }
+
+  .prod-card__size {
+    font-size: calc(0.8125rem + 2 * (100vw - 20rem) / 1600);
+  }
+
+  .prod-card__out {
+    font-size: calc(0.75rem + 2 * (100vw - 20rem) / 1600);
+    padding: 8px calc(8px + 8 * (100vw - 320px) / 1600);
+  }
+
+  .prices-card__reg {
+    font-size: calc(0.8125rem + 3 * (100vw - 20rem) / 1600);
+  }
+
+  .prices-card__new {
+    font-size: calc(0.8125rem + 3 * (100vw - 20rem) / 1600);
+  }
+
+  .prices-card__old {
+    font-size: calc(0.6875rem + 2 * (100vw - 20rem) / 1600);
+  }
+
   .input {
     height: calc(50px + 10 * (100vw - 320px) / 1600);
     margin-bottom: calc(12px + 12 * (100vw - 320px) / 1600);
@@ -1588,6 +1870,10 @@ body._lock {
   .submenu__list {
     -moz-columns: 5;
          columns: 5;
+  }
+
+  .prod-card__details {
+    padding: 8px;
   }
 
   .footer__body {
