--- a/css/account.css
+++ b/css/account.css
@@ -1159,6 +1159,17 @@ body._lock {
   position: relative;
 }
 
+.catalog {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 24px;
+}
+
+.catalog__item {
+  height: 100%;
+  min-width: 0;
+}
+
 .prod-card {
   display: flex;
   flex-direction: column;
@@ -1813,6 +1824,11 @@ body._lock {
     margin-bottom: calc(16px + 16 * (100vw - 320px) / 1600);
   }
 
+  .catalog {
+    gap: calc(12px + 12 * (100vw - 320px) / 1600);
+    margin-bottom: calc(12px + 12 * (100vw - 320px) / 1600);
+  }
+
   .prod-card__name {
     font-size: calc(0.8125rem + 2 * (100vw - 20rem) / 1600);
   }
@@ -1952,6 +1968,10 @@ body._lock {
     display: none;
   }
 
+  .catalog {
+    grid-template-columns: repeat(5, 1fr);
+  }
+
   .menu-footer__list {
     justify-content: center;
     -moz-column-gap: 24px;
@@ -2023,6 +2043,10 @@ body._lock {
     display: flex;
     align-items: center;
   }
+
+  .catalog {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 @media (max-width: 576px) {
@@ -2065,6 +2089,10 @@ body._lock {
     display: none;
   }
 
+  .catalog {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .cookies__body {
     padding: 24px;
   }
@@ -2088,6 +2116,10 @@ body._lock {
     top: 95%;
     right: 50%;
     transform: translate(50%, 50px);
+  }
+
+  .catalog {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .menu-footer__list {
